fixed recipe image spacing

--- a/hello-world/app/assets/stylesheets/stylesheet.css
+++ b/hello-world/app/assets/stylesheets/stylesheet.css
@@ -28,16 +28,46 @@ button {
 }
 
 /*-------------------------
+    The news
+--------------------------*/
+
+#results {
+    width: 100%;
+    padding: 10px;
+    height: 90%;
+    overflow: auto;
+}
+
+#results h3 {
+    margin: 5px 0 10px 0;
+    font-size: 20px;
+}
+
+#results h3 a:hover {
+    text-decoration: none;
+    color: gray;
+}
+
+#results h3 a:visited {
+    text-decoration: none;
+    color: gray;
+}
+
+.news-title {
+    font-size: 25px;
+}
+
+/*-------------------------
     The recipes
 --------------------------*/
 .foods img {
     padding: 10px;
-    width: 92px;
-    height: 92px;
+    width: 90px;
+    height: 90px;
 }
 
 .foods {
-    padding: 5px;
+    padding: 0 5% 5% 7%;
 }
 
 /*-------------------------
